--- a/desafio_4/src/public/css/style.css
+++ b/desafio_4/src/public/css/style.css
@@ -1,25 +1,63 @@
 /* div{
     background-color: antiquewhite;
 } */
+
 *{
     font-family:Arial, Helvetica, sans-serif;
 }
 .itemList{
-    background-color: antiquewhite;
+    /* background-color: antiquewhite; */
     display: flex;
     /* flex-direction: row; */
-    flex-direction: column;
-    justify-content:space-around;
+    flex-direction: row;
+    justify-content: space-around;
     margin: 0px;
+    flex-wrap: wrap;
 }
 .item {
-    flex-direction: row;
+    flex-direction: column;
     margin: 1rem;
+    background-color: lightgray;
+    padding: 1rem 4rem;
+
 }
 
+.item p, .item h4 {
+    margin: .4rem;
+}
 
 form{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+   
 }
 
+label{
+    text-align: left;
+    margin-top: 1rem;
+}
+.input{
+    
+}
+.formularios{
+    display: flex;
+    flex-direction: row;
+}
+
+.formAdd, .formDel{
+    background-color: antiquewhite;
+    padding: 2rem;
+    margin: 1rem;
+    height: fit-content;
+
+}
+
+.input{
+    border-radius: 0%;
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1.5px solid #212529;
+    padding: .5rem 6rem;
+
+}
