arreglo al add, update

--- a/desafio_4/src/views/realTimeProducts.handlebars
+++ b/desafio_4/src/views/realTimeProducts.handlebars
@@ -6,7 +6,7 @@
     <div class="formularios">
         <div class="formAdd">
             <h2>Agregar Producto</h2>
-            <form id="Prod" action="">
+            <form id="addProd" action="">
                 <label for="title"> Title: </label>
                 <input id="title" type="text" name="title" class="input">
 
@@ -46,7 +46,41 @@
             </form>
         </div>
 
+        <div class="formUpdate">
+            <h3>Modificar Producto</h3>
+             <form id="updateProd" action="">
+                <label for="title"> Title: </label>
+                <input id="uTitle" type="text" name="title" class="input">
 
+                <label for="description"> Description: </label>
+                <input id="uDescription" type="text" name="description" class="input">
+
+                <label for="code"> Code: </label>
+                <input id="uCode" type="text" name="code" class="input">
+
+                <label for="price"> Price: </label>
+                <input id="uPrice" type="text" name="price" class="input">
+
+                <label for="status"> Status: </label>
+                <input id="uStatus" type="text" name="status" class="input">
+
+                <label for="stock"> Stock: </label>
+                <input id="uStock" type="text" name="stock" class="input">
+
+
+                <label for="category"> Category: </label>
+                <input id="uCategory" type="text" name="category" class="input">
+
+
+                <label for="thumbnail"> Thumbnail: </label>
+                <input id="uThumbnail" type="text" name="thumbnail" class="input">
+
+                <label for="id"> Id: </label>
+                <input id="uId" type="
+                number" name="id" class="input">
+                <input type="submit" value="Enviar">
+            </form>
+        </div>
 
 
     </div>
