--- a/desafio_4/src/public/css/style.css
+++ b/desafio_4/src/public/css/style.css
@@ -38,14 +38,14 @@ label{
     margin-top: 1rem;
 }
 .input{
-    
+
 }
 .formularios{
     display: flex;
     flex-direction: row;
 }
 
-.formAdd, .formDel{
+.formAdd, .formDel, .formUpdate{
     background-color: antiquewhite;
     padding: 2rem;
     margin: 1rem;
